--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,7 +37,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/products/new, roles: ROLE_ADMIN }
+        - { path: ^/products/edit, roles: ROLE_ADMIN }
+        - { path: ^/cart/index, roles: ROLE_ADMIN }
+        - { path: ^/gamme/index, roles: ROLE_ADMIN }
+        - { path: ^/gamme/new, roles: ROLE_ADMIN }
+        - { path: ^/gamme/show, roles: ROLE_ADMIN }
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/user/index, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
